# segment-intersection-tester

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LOCATION_TESTS.md  README.md  TESTS.md  build.sh  clean_up.py  differ.sh  generate.sh  generator.py  grapher.py  grapher_merger.py  line_shuffler.py  number_converter.py  run_pipeline.py  sanity_check.py  street_converter.py  summarizer.py  test.sh  test_boost_rational.cpp  test_cgal_arrangement.cpp  test_cgal_intersector_rational.cpp  test_cgal_intersector_rational_f.cpp  test_decimal100_r.py  test_decimal25_r.py  test_decimal75_r.py  test_leda.cpp  test_leda_rational_f.cpp  test_ogdf.cpp  test_rust.rs  test_toFraction_r.py  tester.py
adapters/cpp/: CMakeLists.txt  main.hpp  test_boost.cpp  test_cgal_arrangement.cpp  test_cgal_custom_sweep.cpp  test_cgal_intersector.cpp  test_cgal_pairwise.cpp  test_geos.cpp  test_geos_custom.cpp  test_leda.cpp  test_ogdf.cpp  utils.h  utils_cgal.h
adapters/java/: pom.xml
adapters/java/src/main/java/org/example/: Main.java
adapters/python/: SweepIntersectorLib  test_decimal100_d.py  test_decimal100_r.py  test_decimal25_d.py  test_decimal50_d.py  test_decimal50_r.py  test_decimal5_d.py  test_decimal5_r.py  test_decimal75_d.py  test_decimal75_r.py  test_double_d.py  test_fraction_r.py  test_sweeper_d.py  test_sweeper_ud.py  test_vectorized_d.py  test_vectorized_r.py  utils.py
adapters/rust/src/: main.rs
cpp/: CMakeLists.txt  main.hpp  test_boost.cpp  test_boost_rational.cpp  test_cgal_arrangement.cpp  test_cgal_arrangement_rational.cpp  test_cgal_intersector.cpp  test_cgal_intersector_rational.cpp  test_cgal_pairwise.cpp  test_cgal_pairwise_rational.cpp  test_geos.cpp  test_leda.cpp  test_ogdf.cpp  utils.h  utils_boost.h  utils_cgal.h
generation/: README.md  displayer.py  generate_locations.py  generator.py  generator_locations.py  generator_testcases.py  json_converter.py  length_randomizer.py  ogdf_converter.py  random_generator.py  requirements.txt  street_exporter.py  tester.py  tester_accuracy.py
generation/leda/: CMakeLists.txt  README  convert_msc_ogdf.sh  gen_leda.sh  gen_leda_circle_segments.cpp  gen_leda_geo_sweep_intersection_time.cpp  gen_leda_highly_degenerate.py  gen_leda_sweep_time_difficult.cpp  gen_leda_sweep_time_random.cpp  ogdf_converter.cpp
generation/ogdf/: CMakeLists.txt  convert_msc_ogdf.sh  ogdf_converter.cpp  ogdf_converter.py
generation/processing/: length_randomizer.py  number_converter.py
java/: pom.xml
leda/: DOCKERFILE  test_leda.cpp  test_leda_pairwise.cpp  test_leda_pairwise_rational.cpp  test_leda_rational.cpp  utils.h
python/: pyproject.toml  test_decimal100_r.py  test_decimal25_r.py  test_decimal50_r.py  test_decimal5_r.py  test_double_d.py  test_sweeper_ud.py
python/src/segintbench/: fast_inter.py  run.py  testcases.py  utils.py
python/src/segintbench/main/: convert.py  display.py  generate.py  minimize.py  test.py
results/: leda_memory_usage.csv  leda_results.csv  leda_time_taken.csv  memory_usage.csv  merged_memory.md  merged_results.md  merged_time.md  results-intersections.csv  results-runtime.csv  results.csv  summary-intersections.md  summary-runtime.md  time_taken.csv
rust/: Cargo.toml
tools/: displayer.py  minimizer.py  purchase_ogdf_converter.py
