[project]
name = "segintbench"
version = "0.1.0"
description = 'segment intersection benchmarking utils'
requires-python = ">=3.8"
authors = [
  { name = "Simon D Fink", email = "finksim@fim.uni-passau.de" },
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "osmnx",
  "click",
  "tqdm",
  "sh",
  "psutil",
  "ogdf_python",
  "tabulate",
]

[project.scripts]
segintbench-convert = "segintbench.main.convert:cli"
segintbench-generate = "segintbench.main.generate:cli"
segintbench-test = "segintbench.main.test:cli"
segintbench-display = "segintbench.main.display:main"
segintbench-minimize = "segintbench.main.minimize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
